--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -65,7 +65,7 @@
   }
 }
 </div>
-<div class="accordion fixed-bottomrk" id="accordionExample">
+<div class="accordion fixed-bottom" id="accordionExample">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
@@ -99,7 +99,7 @@ else {
   <p>localhost:5000</p>
 </div>
 
-<div class="next-song container-fluid m-0 p-0 d-none">
+<div class="playing container-fluid m-0 p-0 d-none">
   <div class="card shadow bg-dark text-white m-2">
     <div class="card-header  text-uppercase ">
       <h3 class="mb-0">Playing...</h3>
@@ -110,7 +110,7 @@ else {
       <span class="song-title"></span>
     </div>
   </div>
-<div class="card list border shadow m-2 d-none">
+<div class="card list border shadow m-2">
   <div class="card-header bg-white  text-uppercase">
     <h5 class="mb-0">
 Up Next
