--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -53,7 +53,7 @@
     <h4 class="text-white">YouTube Karaoke</h4>
   <div class="form-group d-flex">
     <input type="text" class="form-control" asp-for="Search"  placeholder="Song, Artist...">
-      <button type="submit" class="btn btn-sm btn-dark">GO</button>
+      <button type="submit" class="btn btn-sm btn-dark font-weight-bold">GO</button>
   </div>
 </form>
 
@@ -70,14 +70,15 @@
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Next Songs...
+           Next Songs... <span class="playing"></span> 
         </button>
       </h2>
     </div>
 
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      <div class="list card-body">
+            <ul class="list-group list-group-flush">
+            </ul>
       </div>
     </div>
   </div>
@@ -87,19 +88,13 @@
 else {
 <div class="bg-video">
   <div id="player"></div>
-    <div class="message d-flex text-white"> 
-      <div class="m-auto text-center">
-        <h1 class="display-1 ">Add Songs using your phone.</h1>
-        <p class="leader">Enter the link above.</p>
-      </div>
-    </div>
 </div>
 <div class="sidebar bg-light">
 <div class="text-center p-1 text-white " style="background-color:#030a3a !important;"><h3>YouTube Karaoke</h3>
   <p>localhost:5000</p>
 </div>
 
-<div class="playing container-fluid m-0 p-0 d-none">
+<div class="playing container-fluid m-0 p-0">
   <div class="card shadow bg-dark text-white m-2">
     <div class="card-header  text-uppercase ">
       <h3 class="mb-0">Playing...</h3>
