hide next songss

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -76,7 +76,7 @@
   }
 }
 </div>
-<div class="accordion fixed-bottom" id="accordionExample">
+<!-- <div class="accordion fixed-bottom" id="accordionExample">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
@@ -93,7 +93,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 </div>
 }
 else {
